fixed header background bleed bug

--- a/src/global.scss
+++ b/src/global.scss
@@ -31,7 +31,14 @@
 ion-segment-view {
   height: fit-content;
 }
-
+// Header background bleed hackaround
+// body {
+//   background: #0d0e0d;
+    
+// }
+ion-content{
+  --offset-top: 200px !important;
+}
 .stat-container {
   border: 1px solid #2b2828;
   margin: 0 16px 12px;
